--- a/colla.html
+++ b/colla.html
@@ -3,6 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style type="text/css">
+		#box{
+			width: 100px;
+			height: 100px;
+		}
+	</style>
 </head>
 <body>
 	<div class="box"></div>
