--- a/colla.html
+++ b/colla.html
@@ -15,6 +15,8 @@
 	</style>
 </head>
 <body>
-	<div class="box"></div>
+	<div class="box">
+		<input type="text" name="" id="" value="确定" />
+	</div>
 </body>
 </html>
