--- a/drag.html
+++ b/drag.html
@@ -14,6 +14,6 @@
 </head>
 <body>
 	<div class="box"></div>
-	<script type="text/javascript" src="drag.js"></script>
+	<script type="text/javascript" src="drag1.js"></script>
 </body>
 </html>
